fix(aria/combobox): increases autocomplete demo's  placeholder text contrast
Fixes a bug in Angular Aria's autocomplete demo example where
the input's placeholder text is failing text contrast at 4.4 and does not meet the a11y required 4.5:1 contrast ratio. This
provides a color variable to ::placeholder to meet the ratio
at 8.89:1.

Fixes b/477617379

--- a/src/components-examples/aria/autocomplete/autocomplete.css
+++ b/src/components-examples/aria/autocomplete/autocomplete.css
@@ -117,3 +117,7 @@
 .example-check-icon {
   font-size: 0.9rem;
 }
+
+::placeholder {
+  color: var(--mat-sys-on-surface-variant);
+}
